# nixi

./: README.md
shell/: ShellSettings.qml  greeter.qml  shell.qml
shell/bar/: Bar.qml  BarManager.qml  Popup.qml  SearchButton.qml  TimeDisplay.qml  Workspaces.qml
shell/bar/debug/: NotificationSpawner.qml
shell/bar/mpris/: MprisCard.qml  MprisMenu.qml
shell/bar/notifications/: NotificationItem.qml  NotificationsCenter.qml  NotificationsList.qml
shell/bar/tray/bluetooth/: BluetoothCard.qml  BluetoothMenu.qml
shell/bar/tray/gsr/: GsrMenu.qml
shell/bar/tray/power/: PowerMenu.qml
shell/bar/tray/systray/: SysTrayItem.qml
shell/bar/tray/volume/: VolumeIndicator.qml
shell/bar/tray/wifi/: WifiMenu.qml
shell/launcher/: ApplicationLauncher.qml  Launcher.qml
shell/launcher/chat/: ChatManager.qml  ChatResponse.qml  ChatSidebar.qml  ChatTextBox.qml  ChatWindow.qml
shell/launcher/settings/: BluetoothSettings.qml  GeneralSettings.qml  GsrSettings.qml  Settings.qml  SettingsCard.qml  SettingsManager.qml  SettingsSection.qml  WallpaperSettings.qml  WifiSettings.qml
shell/launcher/settings/chat/: ChatSettings.qml
shell/lockscreen/: GreeterContext.qml  LockContext.qml  LockScreen.qml  LockState.qml  LockSurface.qml
shell/lockscreen/pam/: fingerprint.conf
shell/notifications/: ApplicationNotificationBacker.qml  ApplicationNotifications.qml  CloseButton.qml  NotificationBacker.qml  NotificationIcon.qml  Notifications.qml
shell/services/chat/: ChatConnector.qml
shell/services/chat/providers/: AnthropicProvider.qml  ChatProvider.qml  OllamaProvider.qml
shell/services/gsr/: GpuScreenRecord.qml
shell/services/mpris/: Mpris.qml
shell/services/nix/: NixRunner.qml
shell/services/screenshot/: Screenshot.qml  ScreenshotConfig.qml  ScreenshotOverlay.qml
shell/volosd/: VolumeOSD.qml
shell/widgets/: StyledButton.qml  StyledDropdown.qml  StyledTextInput.qml
utils/: CMakeLists.txt  clipboard.cpp  clipboard.h  default.nix  httprequest.cpp  httprequest.h  markdownview.cpp  markdownview.h  microtex.nix  screenshotprovider.cpp  screenshotprovider.h  screenshotter.cpp  screenshotter.h  shell.nix  utils.cpp  utils.h  utilsplugin.cpp  utilsplugin.h
